# Magul

./: .gitignore  CMakeLists.txt  LICENSE  README.md  debugbuild.sh  releasebuild.sh  run.sh
include/: basicscene.h  camera.h  circle.h  color.h  constants.h  directionallight.h  helper.h  hit.h  ilight.h  image.h  isampler.h  lightinfo.h  material.h  pointlight.h  ray.h  sphere.h  vector2.h  vector3.h
resources/shader/: shader.frag
src/: basicscene.cpp  camera.cpp  circle.cpp  color.cpp  constants.cpp  directionallight.cpp  helper.cpp  hit.cpp  image.cpp  lightinfo.cpp  magul.cpp  material.cpp  pointlight.cpp  ray.cpp  sphere.cpp  vector2.cpp  vector3.cpp
